--- a/vercel.json
+++ b/vercel.json
@@ -3,3 +3,18 @@
 	{ "source": "/(.*)", "destination": "/api/app" }
   ]
 }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "./",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
+}
